<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".forgot.password.screen.ForgotPasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/forgot_your_password"
                android:textColor="@color/grayForgotPasswordTitle"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_subtitle_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20ssp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/sub_title_forgot_password"
                android:textColor="@color/grayFogotPasswordSubTitle"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_your_password" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/forgot_password_segment_btn_bg"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_subtitle_forgot_pass">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/segment_button_email"
                    style="@style/App_SegmentButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/selected_segment_button"
                    android:button="@null"
                    android:text="@string/email_segment1"
                    android:textColor="@color/primaryColor" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/segment_button_phone"
                    style="@style/App_SegmentButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:text="@string/phone_segment"
                    android:textColor="@color/grayORTextColor" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmailPhone"
                style="@style/App_EdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:maxHeight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfEmailPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/usrename"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxHeight="@dimen/_50sdp"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textColor="@color/blackTextFieldColor"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tlEmailPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>