<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".forgot.password.screen.CreatePasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_create_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/create_new_password"
                android:textColor="@color/grayForgotPasswordTitle"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_subtitle_create_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20ssp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/create_new_password_subtitle"
                android:textColor="@color/grayFogotPasswordSubTitle"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_create_pass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassowrd"
                style="@style/App_EdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:hint="@string/create_first_password"
                android:maxHeight="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_subtitle_create_pass"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/create_first_password"
                    android:inputType="textEmailAddress"
                    android:maxHeight="@dimen/_50sdp"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlConfirmPassowrd"
                style="@style/App_EdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:hint="@string/create_first_password"
                android:maxHeight="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlPassowrd"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress"
                    android:maxHeight="@dimen/_50sdp"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtErrorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tlConfirmPassowrd"
                app:layout_constraintStart_toStartOf="@+id/tlConfirmPassowrd"
                android:text="@string/description"
                android:textColor="@color/redErrorColor"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btnLogin"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/inter_semi_bold"
                android:onClick="@{onClick.onClick}"
                android:text="@string/create_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tlConfirmPassowrd" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>