<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_110sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:strokeColor="@color/grayEditTextBackground"
    app:strokeWidth="@dimen/_2sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgDoctor"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/doctor_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDoctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/dr_marcus_horizon"
            android:textColor="@color/blackHomeTitle"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgDoctor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDoctorOccupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/chardiologist"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDoctorName" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewStar"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/homeCardBackground"
            app:cardCornerRadius="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDoctorOccupation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/star_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/_4_7"
                    android:textColor="@color/primaryColor"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintBottom_toBottomOf="@id/imageStar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageStar"
                    app:layout_constraintTop_toTopOf="@id/imageStar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/location_icon"
            app:layout_constraintBottom_toBottomOf="@id/cardViewStar"
            app:layout_constraintStart_toEndOf="@id/cardViewStar"
            app:layout_constraintTop_toBottomOf="@+id/txtDoctorOccupation"
            app:layout_constraintTop_toTopOf="@id/cardViewStar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:text="@string/_800m_away"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@id/cardViewStar"
            app:layout_constraintStart_toEndOf="@id/imgLocation"
            app:layout_constraintTop_toBottomOf="@id/txtDoctorOccupation"
            app:layout_constraintTop_toTopOf="@+id/cardViewStar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

